Blueprints. Completely restructured articles section. Y'know, nothin' big. Yawn.

--- a/project_list.html
+++ b/project_list.html
@@ -4,9 +4,9 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Projects, by Shoofle</title>
-    <link href="static/bootstrap/css/bootstrap.css" rel="stylesheet" type="text/css">
-    <link href="static/bootstrap/css/bootstrap-responsive.css" rel="stylesheet" type="text/css">
-    <link href="static/shoofle.css" rel="stylesheet" type="text/css">
+		<link href="/static/bootstrap/css/bootstrap.css" rel="stylesheet" type="text/css">
+		<link href="/static/bootstrap/css/bootstrap-responsive.css" rel="stylesheet" type="text/css">
+		<link href="/static/shoofle.css" rel="stylesheet" type="text/css">
 </head>
 	<body>
 		<div class="row-fluid">
@@ -93,10 +93,10 @@
 			<div class="span4">
 				<div class="about">
 					<h1>Hi! I'm Shoofle. I'm a lot of person.</h1>
-          <p>I graduated from the University of Virginia in 2012, majoring in math and physics with a minor in computer science. I'm really good at math. I'm pretty good at programming.</p>
-          <p>I've always loved to draw, but never focused enough time on it. I'm an intensely creative person and I like to think that this comes out in everything I do - and I'm trying harder every day.</p>
-          <p>I'm a passionate advocate for feminism, transgender rights, queer rights, and social justice in general.</p>
-          <p><span class="label label-important"><i class="icon-warning-sign"></i>Warning!</span> This website is still very much under construction. I'm in the process of figuring out how I want this website to look and function.</p>
+					<p>I graduated from the University of Virginia in 2012, majoring in math and physics with a minor in computer science. I'm really good at math. I'm pretty good at programming.</p>
+					<p>I've always loved to draw, but never focused enough time on it. I'm an intensely creative person and I like to think that this comes out in everything I do - and I'm trying harder every day.</p>
+					<p>I'm a passionate advocate for feminism, transgender rights, queer rights, and social justice in general.</p>
+					<p><span class="label label-important"><i class="icon-warning-sign"></i>Warning!</span> This website is still very much under construction. I'm in the process of figuring out how I want this website to look and function.</p>
 				</div>
 			</div>
 		</div>
