--- a/static/backup/spinning.html
+++ b/static/backup/spinning.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Projects, by Shoofle</title>
-		<link href="../static/bootstrap/css/bootstrap.css" rel="stylesheet" type="text/css">
-		<link href="../static/shoofle.css" rel="stylesheet" type="text/css">
+		<link href="/static/bootstrap/css/bootstrap.css" rel="stylesheet" type="text/css">
+		<link href="/static/shoofle.css" rel="stylesheet" type="text/css">
 	</head>
 	<body>
 		<article class="project">
@@ -51,6 +51,7 @@
 					<li>Neck wraps, shoulder wraps</li>
 					<li>Fishtails (forward only, right hand only)</li>
 					<li>Rainbow Stalls</li>
+					<li>Conveyor Belts</li>
 				</ul>
 				<p>I'd like to learn to spin a dragon staff someday.</p>
 			</section>
