--- a/static/backup/game_log.html
+++ b/static/backup/game_log.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>Game Log</title>
-    <link href="../static/bootstrap/css/bootstrap.css" rel="stylesheet" type="text/css">
-    <link href="../static/bootstrap/css/bootstrap-responsive.css" rel="stylesheet" type="text/css">
-    <link href="../static/shoofle.css" rel="stylesheet" type="text/css">
+    <link href="/static/bootstrap/css/bootstrap.css" rel="stylesheet" type="text/css">
+    <link href="/static/bootstrap/css/bootstrap-responsive.css" rel="stylesheet" type="text/css">
+    <link href="/static/shoofle.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <style type="text/css">
